--- a/templates/openvpn.nmconnection.j2
+++ b/templates/openvpn.nmconnection.j2
@@ -7,11 +7,15 @@ permissions=
 timestamp=
 
 [vpn]
-auth=SHA256
 ca=/etc/pki/openvpn/{{ item.name }}-ca.pem
 cert=/etc/pki/openvpn/{{ item.name }}-cert.pem
 cert-pass-flags=0
-cipher=AES-256-GCM
+{% if item.auth is defined %}
+auth={{ item.auth }}
+{% endif %}
+{% if item.cipher is defined %}
+cipher={{ item.cipher }}
+{% endif %}
 {% if item.username is defined %}
 connection-type=password-tls
 username={{ item.username }}
@@ -25,7 +29,9 @@ remote={{ item.remote }}
 remote-cert-tls=server
 ta=/etc/pki/openvpn/{{ item.name }}-tls-auth.pem
 ta-dir=1
+{% if item.x509name is defined %}
 verify-x509-name=name:{{ item.x509name }}
+{% endif %}
 service-type=org.freedesktop.NetworkManager.openvpn
 
 [ipv4]
